<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="243dp"
        android:text="@string/audioplayer_text"
        app:layout_constraintBottom_toTopOf="@+id/textProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/buttonPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="146dp"
        android:text="@string/pause_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="49dp"
        android:text="@string/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        android:text="@string/skip_button"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlay"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />

    <TextView
        android:id="@+id/textProgress"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginTop="444dp"
        android:layout_marginBottom="124dp"
        android:gravity="center"
        android:text="@string/progress_text"
        app:layout_constraintBottom_toTopOf="@+id/buttonBookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonTrack"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="97dp"
        android:text="@string/track_button"
        app:layout_constraintEnd_toStartOf="@+id/buttonBookmark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProgress" />

    <Button
        android:id="@+id/buttonBookmark"
        android:layout_width="121dp"
        android:layout_height="59dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="90dp"
        android:text="@string/bookmark_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProgress" />

    <TextView
        android:id="@+id/textSong"
        android:layout_width="164dp"
        android:layout_height="21dp"
        android:gravity="center"
        android:text="@string/song_text"
        app:layout_constraintBottom_toTopOf="@+id/buttonSkip"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlay"
        app:layout_constraintStart_toEndOf="@+id/buttonPause"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.706" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="22dp"
        android:text="@string/stop_button"
        app:layout_constraintBottom_toTopOf="@+id/textProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSkip" />

    <TextView
        android:id="@+id/textViewPlayback"
        android:layout_width="409dp"
        android:layout_height="22dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="71dp"
        android:gravity="center"
        android:text="@string/songspeed_text"
        app:layout_constraintBottom_toTopOf="@+id/buttonTrack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProgress" />

</androidx.constraintlayout.widget.ConstraintLayout>